活動上完稿

--- a/css/public.css
+++ b/css/public.css
@@ -114,6 +114,7 @@ body.index_he { height: 100vh; }
 .news_box { display: inline-block; width: 100%; border-bottom: 2px dotted #c08f47; padding: 15px 0; *zoom: 1; }
 .news_box:after { display: table; content: ""; line-height: 0; clear: both; }
 @media screen and (max-width: 449px) and (min-width: 0) { .news_box { padding: 0 0 10px 0; } }
+.news_box.sbord { border-bottom: 2px solid #c08f47; }
 .news_box.top_Bbot { margin-top: 15px; border-top: 2px dotted #c08f47; }
 .news_box .n_date { display: inline-block; background-color: #c08f47; font-size: 1rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; padding: 5px 10px; color: white; float: left; }
 @media screen and (max-width: 449px) and (min-width: 0) { .news_box .n_date { font-size: .9rem; padding: 5px 10px; } }
@@ -146,7 +147,7 @@ body.index_he { height: 100vh; }
 @media screen and (max-width: 629px) and (min-width: 0) { .show_boxs .show_box .sb_r { width: 100%; padding-left: 0; padding-top: 15px; padding-bottom: 15px; } }
 .show_boxs .show_box .sb_r .s_name { display: inline-block; width: 100%; font-size: 1.2rem; color: #b8843e; font-weight: 600; padding-bottom: 10px; }
 .show_boxs .show_box .sb_r .s_name:before { display: inline-block; content: attr(title); font-size: 1.2rem; color: #e4007f; }
-.show_boxs .show_box .sb_r .s_type { display: inline-block; width: 100%; font-size: 1rem; }
+.show_boxs .show_box .sb_r .s_type { display: inline-block; width: 100%; font-size: 1rem; line-height: 1.6rem; }
 
 p { padding: 0; margin: 0; }
 
@@ -161,7 +162,7 @@ p { padding: 0; margin: 0; }
 
 .program_boxs { display: inline-block; width: 100%; padding-top: 20px; *zoom: 1; }
 .program_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
-.program_boxs span { display: inline-block; width: 100%; font-size: 1rem; text-align: left; }
+.program_boxs span { display: inline-block; width: 100%; font-size: 1.2rem; line-height: 1.9rem; text-align: left; }
 @media screen and (max-width: 754px) and (min-width: 0) { .program_boxs span { font-size: 16px; line-height: 25px; } }
 .program_boxs span.tr_o { padding: 20px 0 0 0; }
 .program_boxs span.tr_list { padding: 0 0 20px 30px; }
@@ -266,6 +267,7 @@ p { padding: 0; margin: 0; }
 .add_type { font-size: 1.2rem; color: #5a5a5a; text-align: left; }
 .add_type.add_right { text-align: right !important; }
 @media screen and (max-width: 499px) and (min-width: 0) { .add_type { font-style: 1rem; } }
+.add_type.be_g:before { display: inline-block; content: attr(title); font-weight: 600; color: #b8843e; }
 .add_type:before { display: inline-block; content: attr(title); font-weight: 600; color: #e4007f; }
 .add_type.add_2 { display: inline-block; width: 50%; float: left; }
 @media screen and (max-width: 894px) and (min-width: 0) { .add_type.add_2 { width: 100%; } }
