--- a/scss/public.scss
+++ b/scss/public.scss
@@ -587,6 +587,10 @@ body {
     padding: 0 0 10px 0;
   }
 
+  &.sbord {
+    border-bottom: 2px solid rgba(192, 143, 71, 1.00); 
+  }
+
   &.top_Bbot {
     margin-top: 15px;
     border-top: 2px dotted rgba(192, 143, 71, 1.00); 
@@ -783,6 +787,7 @@ body {
         display: inline-block;
         width: 100%;
         font-size: 1rem;
+        line-height: 1.6rem;
       }
     }
   }
@@ -838,7 +843,8 @@ p {
   span {
     display: inline-block;
     width: 100%;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    line-height: 1.9rem;
     text-align: left;
     // padding: 20px 0;
     // line-height: 30px;
@@ -1427,12 +1433,22 @@ p {
   color: rgba(90, 90, 90, 1.00);
   text-align: left;
 
+
   &.add_right {
     text-align: right !important;
   }
 
   @include range-width(0, 500px) {
     font-style: 1rem;
+  }
+
+  &.be_g {
+    &:before {
+      display: inline-block;
+      content: attr(title);
+      font-weight: 600;
+      color: rgba(184, 132, 62, 1.00);
+    }
   }
 
   &:before {
